[package]
name = "session-bot-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.26"
tracing-subscriber = "0.2.20"
toml = "0.5.8"
serde = "1.0.130"

[dependencies.serenity]
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api"]
version = "0.10"

[dependencies.tokio]
features = ["macros", "rt-multi-thread"]
version = "1.0"