[package]
name = "session-bot-rs"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.26"
tracing-subscriber = "0.2.20"
toml = "0.5.8"
serde = "1.0.130"
hotwatch = "0.4.5"
chrono = "0.4.19"

[dependencies.serenity]
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api", "cache"]
version = "0.10"

[dependencies.tokio]
features = ["macros", "rt-multi-thread"]
version = "1.0"